Changed Reports + adjusted mechanisms

--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/MainPanel/AdditionalComponents/DoctorsPatientsComponent.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/MainPanel/AdditionalComponents/DoctorsPatientsComponent.razor
@@ -20,6 +20,10 @@
 
                     </MudListItem>
                 }
+                @if (doctorsPatients.Count == 0)
+                {
+                    <small>Brak pacjentów</small>
+                }
             </MudList>
         </MudPaper>            
     </section>
