--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/MedicalDocumentation/MedicalDocumentation.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/MedicalDocumentation/MedicalDocumentation.razor
@@ -13,6 +13,7 @@
 
 @inject NavigationManager navigationManager 
 @inject IPatientApiService _patientApiService
+@inject IManageService _manageService
 
 @implements IDisposable
 
@@ -26,73 +27,9 @@
             Dodaj plik
         </NavLink>
     </div>
-    <div class="row d-flex d-flex-row pt-5 border-top-0 border-dark">
-        <h2 class="pt-5">Twoje pliki</h2>
-        @if (readingFiles)
-        {
-            <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
-        }
-        
-        <div class="col d-flex d-flex-row pt-2 position-relative" style="height: 100px;">
-            @if (filesGet)
-            {                
-                @foreach (var file in medicalFilesToShow)
-                {
-                    <div class="file-block mx-2" style="cursor: pointer;" @onclick="() => HandleShowFile(file)">
-                        <div class="bi-x-circle"></div>
-                        <div class="bi-file-icon"></div>
-                    </div>
-                }                                
-            }
-            @if (showPreviewModal)
-            {
-                <div class="modal-backdrop">
-                    <div class="modal" tabindex="-1" style="display:block;">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" >Podglad</h5>
-                                <button type="button" class="btn-close" @onclick="CloseModal"></button>
-                            </div>
-                            <div class="modal-body">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-4">
-                                            <p>Nazwa pliku</p>
-                                            <p>@medicalFileToShowPreview.FileName</p>
-                                        </div>
-                                        <div class="col-8">
-                                            <p>Typ pliku</p>
-                                            <p></p>
-                                        </div>
-                                    </div>
-
-                                    <div class="row">
-
-                                        <div class="col">
-                                            <img src=@medicalFileToShowPreview.FileBase64 />
-                                            <p>Opis</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                <button class="btn btn-primary btn-custom-primary" @onclick="CloseModal">Zamknij</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                @* <div style="transform: translate(80%, 8%);"> *@
-                    @* <Patient.Api.Components.Pages.AdditionalComponents.PreviewFileModal 
-                                                                                        CurrentFileBase64="@medicalFileToShowPreview.FileBase64"
-                                                                                        CurrentFileName="@medicalFileToShowPreview.FileName"
-                                                                                        CurrentFileType="@medicalFileToShowPreview.MedicalDocumentationType" /> *@
-                @* </div> *@
-                
-            }
-        </div>
-
-    </div>
-
+    <h2 class="pt-5">Twoje pliki</h2>
+    <Patient.Api.Components.Pages.PatientPages.MedicalDocumentation.AdditionalComponents.PatientsDocumentationComponent TokenSource="TokenSource"/>
+    
 
 
 </div>
@@ -101,61 +38,19 @@
 @code {
     private CancellationTokenSource TokenSource = new();
 
-    private int maxFiles = 5;
-    private List<MedicalFileToShowDto> medicalFilesToShow = new();
-    private bool filesGet;
-    private bool readingFiles;
-
-    private bool showPreviewModal;
-    private MedicalFileToShowDto medicalFileToShowPreview = new();
-
-    private bool loadingDocument;
+    
 
     protected async override Task OnInitializedAsync()
     {
         try
         {
-            await Task.Delay(100);
-            readingFiles = true;
-            medicalFilesToShow = await _patientApiService.GetMedicalFiles(TokenSource.Token);
-            if (medicalFilesToShow.Count > 0) { filesGet = true; }         
-            readingFiles = false;
-            StateHasChanged();
+            
         }
         catch(OperationCanceledException e)
         {
             
         }
         
-
-    }
-
-    private async void HandleShowFile(MedicalFileToShowDto file)
-    {
-        medicalFileToShowPreview = file;      
-        medicalFileToShowPreview.FileBase64 = await LoadImageBase64(medicalFileToShowPreview.FileUrl);
-        showPreviewModal = true;
-        StateHasChanged();
-    }
-
-    private async Task CloseModal()
-    {
-        showPreviewModal = false;
-    }
-
-    private async Task<string> LoadImageBase64(string url)
-    {
-        using (var _httpClient = new HttpClient())
-        {
-            var response = await _httpClient.GetAsync(url);
-            if (response.IsSuccessStatusCode)
-            {
-                var imageBytes = await response.Content.ReadAsByteArrayAsync();
-                return $"data:image/jpeg;base64,{Convert.ToBase64String(imageBytes)}";
-
-            };
-            return null;
-        }
 
     }
 
