--- a/Patient.Api/Patient.Api/wwwroot/app.css
+++ b/Patient.Api/Patient.Api/wwwroot/app.css
@@ -80,6 +80,7 @@ body{
 
     .btn-custom-primary:hover {
         border-color: white;
+        background-color: rgb(196, 238, 144);
     }
 
 
@@ -108,8 +109,8 @@ body{
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='60' height='60' fill='currentColor' class='bi bi-file-earmark-fill' viewBox='0 0 16 16'%3E%3Cpath d='M4 0h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2m5.5 1.5v2a1 1 0 0 0 1 1h2z'/%3E%3C/svg%3E");
     display: inline-block;
     position: relative;
-    bottom: 1.25rem;
     left: 0.125rem;
+    top: 0.15rem;
     width: 4rem;
     height: 4rem;
     background-size: cover;
@@ -152,9 +153,36 @@ body{
     background-size: cover;
 }
 
+.bi-heart-fill {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-heart-fill' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314'/%3E%3C/svg%3E");
+    height:100%;
+
+}
+
+.bi-heart-unfill {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-heart' viewBox='0 0 16 16'%3E%3Cpath d='m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15'/%3E%3C/svg%3E");
+    height: 100%;
+}
+
+.bi-heart-icon {
+    display: inline-block;
+    position: relative;
+    width: 2.5rem;
+    height: 2.5rem;
+    top: -1px;
+    background-size: cover;
+}
+
+
+
 .badge-item-custom-erasable {
     display: inline-block;
-    width: 4rem;
+    width: auto;
+    height: 2rem;
+    font-size: 0.75rem;
+    background-color: rgb(144,238,144);
+    color: white;
+    border-radius: 45%;
 }
 
     .badge-item-custom-erasable:hover {
@@ -164,11 +192,28 @@ body{
         .badge-item-custom-erasable:hover::after {
             content: "Usuñ";
         }
-        
+
+
+.badge-item-custom {
+    display: inline-block;
+    width: auto;
+    height: 2rem;
+    font-size: 0.75rem;
+    background-color: rgb(144,238,144);
+    color: white;
+    border-radius: 45%;
+}
+
+    .badge-item-custom:hover {
+    }
+
+        .badge-item-custom:hover::after {
+
+        }      
 
 .file-block {
     display: inline-block;
-    position: static;
+    position: relative;
     width: 4.5rem;
     height: 5rem;
     margin-block: 1rem;
@@ -176,3 +221,16 @@ body{
     margin-right: 2rem;
     border: 2px solid black;
 }
+
+.img-avatar {
+    height: 10rem;
+    width: 10rem;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+    .img-avatar img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
