--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Patients/PatientPreviewModal.razor.css
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Patients/PatientPreviewModal.razor.css
@@ -6,12 +6,14 @@
     position: fixed;
     width: 50rem;
     height: 75rem;
-    transform: translate(31%, 14%);
+    transform: translate(55%, 14%);
     z-index: 1050;
     border-radius: 10px;
     justify-content: center;
     text-align: center;
     align-items: center;
+    max-height: 700px;
+    overflow-y: auto;
 }
 
 .modal-backdrop {
