--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/MedicalDocumentation/AdditionalComponents/PatientsDocumentationComponent.razor.css
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/MedicalDocumentation/AdditionalComponents/PatientsDocumentationComponent.razor.css
@@ -1,32 +1,11 @@
-﻿
-
-
-.file-block {
-    display: inline-block;
-    position: relative;
-    width: 4.5rem;
-    height: 5rem;
-    margin-block: 1rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
-    border: 2px solid black;
+﻿body {
 }
-
-.font-10px {
-    font-size: 10px;
-}
-
-.report {
-    border: 1px solid black;
-    border-radius: 10px;
-}
-
 
 .modal {
     position: fixed;
     width: 50rem;
     height: 75rem;
-    transform: translate(55%, 14%);
+    transform: translate(80%, 14%);
     z-index: 1050;
     border-radius: 10px;
     justify-content: center;
@@ -40,6 +19,11 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1040;
+}
+
+.modal-content {
+    max-height: 80vh;
+    overflow-y: auto;
 }
 
 .modal-dialog {
